~slight adjustments for SW1 & SW2

--- a/Software 1/Makefile
+++ b/Software 1/Makefile
@@ -1,18 +1,22 @@
-MAINFILE = SW1
-SRCS = *.c
+TASK1 = task1
+TASK2 = task2
+SRCS = complex.c
 OBJS =
 CFLAGS = -std=gnu99 -Wall -Wextra# -Werror
 LFLAGS = -lm
 
-all: $(MAINFILE)
+all: $(TASK1) $(TASK2)
 
-$(MAINFILE): $(OBJS)
-	gcc -o $(MAINFILE) $(SRCS) $(OBJS) $(CFLAGS) $(LFLAGS)
+$(TASK1): $(OBJS)
+	gcc -o $(TASK1) $(TASK1).c $(SRCS) $(OBJS) $(CFLAGS) $(LFLAGS)
+
+$(TASK2): $(OBJS)
+	gcc -o $(TASK2) $(TASK2).c $(SRCS) $(OBJS) $(CFLAGS) $(LFLAGS)
 
 %.o: %.c
 	gcc -c -o $@ $< $(CFLAGS)
 
 clean:
-	rm -f $(MAINFILE) $(OBJS)
+	rm -f $(TASK1) $(TASK2)
 
 re: clean all
